--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </head>
 
 <body>
-    <script src="./src/index.ts"></script>
+    <div id="main">
+        <script src="./src/index.ts"></script>
+    </div>
 </body>
 
 </html>
